fix: Adjust spacing

--- a/components/GoogleDocFormatter.module.scss
+++ b/components/GoogleDocFormatter.module.scss
@@ -121,7 +121,7 @@
   iframe {
     border: none;
     position: relative;
-    top: -20px;
+    top: -10px;
     left: -15px;
     width: calc(100% + 30px);
     height: calc(100% + 60px);
@@ -131,6 +131,10 @@
 
   &:hover {
     cursor: pointer;
+
+    &:after {
+      background-color: rgba(0, 0, 0, 0.05);
+    }
   }
 
   &:after {
@@ -142,7 +146,6 @@
     height: 100%;
     background-color: rgba(255, 255, 255, 0);
     z-index: 2;
-
   }
 }
 
