--- a/components/Lightbox.module.scss
+++ b/components/Lightbox.module.scss
@@ -8,7 +8,7 @@
   z-index: 100;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: cent‰er;
   transition: 0.2s opacity;
   opacity: 0;
   pointer-events: none;
@@ -19,9 +19,9 @@
   }
 
   iframe {
-    height: calc(100% - 150px);
-    width: calc(100% - 120px);
-    margin-top: 30px;
+    height: calc(100% - 120px);
+    width: calc(100% - 40px);
+    margin-top: 60px;
     border: none;
     border-radius: 5px;
     box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
